2015-03-29  Mike Frysinger  <vapier@gentoo.org>

	* sim-arange.h (SIM_ARANGE_INLINE): Move above sim_addr_range_hit_p.
	(sim_addr_range_hit_p): Change INLINE to SIM_ARANGE_INLINE.
	* sim-inline.h (INLINE2): Define to gnu_inline when available.

2015-03-24  Mike Frysinger  <vapier@gentoo.org>

	* sim-profile.c (profile_pc_event): Get pc via sim_pc_get.  Delete
	usage of STATE_WATCHPOINTS.
	(profile_pc_init): Delete STATE_WATCHPOINTS (sd)->pc check.  Change
	STATE_WATCHPOINTS (sd)->sizeof_pc to sizeof (sim_cia).

2015-03-24  Mike Frysinger  <vapier@gentoo.org>

	* tconfig.h: Note SIM_HAVE_PROFILE is deprecated.

2015-03-24  Mike Frysinger  <vapier@gentoo.org>

	* tconfig.h: Note SIM_HAVE_BIENDIAN is deprecated.

2015-03-24  Mike Frysinger  <vapier@gentoo.org>

	* acinclude.m4 (SIM_AC_OPTION_HARDWARE): Move default option setting
	of enable_sim_hardware to AC_ARG_ENABLE.

2015-03-23  Mike Frysinger  <vapier@gentoo.org>

	* acinclude.m4 (SIM_AC_OPTION_HARDWARE): Delete SIM_DV_SOCKSER_O.
	Add dv-sockser.o to sim_hw_objs.

2015-03-23  Mike Frysinger  <vapier@gentoo.org>

	* dv-sockser.c: Include config.h.
	* dv-sockser.h: Include sim-inline.h.
	[HAVE_DV_SOCKSER]: Move all prototypes here.
	[!HAVE_DV_SOCKSER] (dv_sockser_status, dv_sockser_write,
	dv_sockser_write_buffer, dv_sockser_read): New stub functions.

2015-03-16  Mike Frysinger  <vapier@gentoo.org>

	* gentmap.c, run.c: Convert old style prototypes.

2015-03-16  Mike Frysinger  <vapier@gentoo.org>

	* acinclude.m4 (SIM_AC_COMMON): Call AH_BOTTOM.  Delete logic for
	symlinking tconfig.h to tconfig.in.
	* config.in, configure: Regenerate.
	* nrun.c, run.c, sim-basics.h: Delete tconfig.h include.
	* tconfig.in: Rename file ...
	* tconfig.h: ... here.

2015-03-15  Mike Frysinger  <vapier@gentoo.org>

	* dv-socker.h (dv_sockser_install): Declare.
	* sim-module.c: Include config.h.
	[HAVE_DV_SOCKSER]: Include dv-sockser.h.
	(modules) [HAVE_DV_SOCKSER]: Add dv_sockser_install.
	* sim-module.h: Include gdb/remote-sim.h.
